[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/main_menu/levels.gd" type="Script" id=1]
[ext_resource path="res://scenes/main_menu/main_menu_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/main_menu/level_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/main_menu/button.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/world/crosshair.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "despawn"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1000, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("container:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 210, 250 ), Vector2( 210, -450 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("back_button:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("back_button:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0230834, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1000, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("container:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 210, 900 ), Vector2( 210, 250 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("back_button:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("back_button:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="levels" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="title" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 230.0

[node name="Label" type="Label" parent="title"]
margin_left = 535.0
margin_top = 80.0
margin_right = 744.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 2 )
text = "Levels"
align = 1
valign = 1

[node name="container" type="Control" parent="."]
margin_left = 210.0
margin_top = 197.724
margin_right = 1060.0
margin_bottom = 597.723
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="line 1" type="Control" parent="container"]
margin_right = 850.0
margin_bottom = 100.0
__meta__ = {
"_edit_group_": true
}

[node name="level_button" parent="container/line 1" instance=ExtResource( 3 )]

[node name="level_button2" parent="container/line 1" instance=ExtResource( 3 )]
margin_left = 150.0
margin_right = 250.0
level = 2

[node name="level_button3" parent="container/line 1" instance=ExtResource( 3 )]
margin_left = 300.0
margin_right = 400.0
level = 3

[node name="level_button4" parent="container/line 1" instance=ExtResource( 3 )]
margin_left = 450.0
margin_right = 550.0
level = 4

[node name="level_button5" parent="container/line 1" instance=ExtResource( 3 )]
margin_left = 600.0
margin_right = 700.0

[node name="level_button6" parent="container/line 1" instance=ExtResource( 3 )]
margin_left = 750.0
margin_right = 850.0

[node name="line 2" type="Control" parent="container"]
margin_top = 150.0
margin_right = 850.0
margin_bottom = 250.0
__meta__ = {
"_edit_group_": true
}

[node name="level_button" parent="container/line 2" instance=ExtResource( 3 )]

[node name="level_button2" parent="container/line 2" instance=ExtResource( 3 )]
margin_left = 150.0
margin_right = 250.0

[node name="level_button3" parent="container/line 2" instance=ExtResource( 3 )]
margin_left = 300.0
margin_right = 400.0

[node name="level_button4" parent="container/line 2" instance=ExtResource( 3 )]
margin_left = 450.0
margin_right = 550.0

[node name="level_button5" parent="container/line 2" instance=ExtResource( 3 )]
margin_left = 600.0
margin_right = 700.0

[node name="level_button6" parent="container/line 2" instance=ExtResource( 3 )]
margin_left = 750.0
margin_right = 850.0

[node name="line 3" type="Control" parent="container"]
margin_top = 300.0
margin_right = 850.0
margin_bottom = 400.0
__meta__ = {
"_edit_group_": true
}

[node name="level_button" parent="container/line 3" instance=ExtResource( 3 )]

[node name="level_button2" parent="container/line 3" instance=ExtResource( 3 )]
margin_left = 150.0
margin_right = 250.0

[node name="level_button3" parent="container/line 3" instance=ExtResource( 3 )]
margin_left = 300.0
margin_right = 400.0

[node name="level_button4" parent="container/line 3" instance=ExtResource( 3 )]
margin_left = 450.0
margin_right = 550.0

[node name="level_button5" parent="container/line 3" instance=ExtResource( 3 )]
margin_left = 600.0
margin_right = 700.0

[node name="level_button6" parent="container/line 3" instance=ExtResource( 3 )]
margin_left = 750.0
margin_right = 850.0

[node name="anim" type="AnimationPlayer" parent="."]
anims/despawn = SubResource( 1 )
anims/ready = SubResource( 2 )

[node name="back_button" parent="." instance=ExtResource( 4 )]
margin_left = 10.0
margin_top = 10.0
margin_right = 190.0
margin_bottom = 90.0
text = "BACK"

[node name="crosshair" parent="." instance=ExtResource( 5 )]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
